--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@uploadthing/react": "^7.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.485.0",
     "mongoose": "^8.13.1",
     "next": "15.2.4",
@@ -24,6 +26,7 @@
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "uploadthing": "^7.6.0",
